# jelly

./: CMakeLists.txt
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Debug/libs/glad/: Makefile  cmake_install.cmake
Debug/libs/glad/cmake/: Makefile  cmake_install.cmake
Debug/libs/glad/include/glad/: glad.h
Debug/libs/glad/src/: glad.c
Debug/libs/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
Debug/libs/glfw/docs/: Doxyfile  Makefile  cmake_install.cmake
Debug/libs/glfw/docs/html/: build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  deprecated.html  dir_2efe28403b97b48a7daee10478d4bf7e.html  dir_52a77c93490c3da48d169dc9a93bbb81.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_83a1e6886abe2779e550e022b3c90fda.html  dir_dc84951246111aa4174db553df33c08a.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html  index.html  (+37 more)
Debug/libs/glfw/src/: Makefile  cmake_install.cmake
Debug/libs/glm/: Makefile  cmake_install.cmake
Debug/libs/glm/glm/: Makefile  cmake_install.cmake
include/JLY/: jelly.h
libs/glad/: glad.c
libs/glad/glad/: glad.h
shaders/: basic.frag  basic.vert
src/: camera.cpp  camera.hpp  input.cpp  input.hpp  internal.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  translation.cpp  translation.hpp  window.cpp
